# persona-pipeline

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/occupation_lookup/: India.parquet  Japan.parquet  Korea.parquet  USA.parquet
docs/superpowers/plans/: 2026-05-09-mcp-persona-store.md  2026-05-09-mcp-remote-deploy.md  (+1 more)
persona_mcp_store/: _config.py  io.py  mcp_server.py  remote.py  store.py
persona_mcp_store/cli/: __main__.py  _paths.py  app.py  build.py  classify_occupation.py  download.py  serve.py  serve_http.py
persona_mcp_store/mappings/: __init__.py  _base.py  brazil.py  france.py  india.py  japan.py  korea.py  singapore.py  usa.py
persona_mcp_store/stages/: classify_occupation.py  enrich.py
persona_pipeline/: _config.py  io.py  mcp_server.py  remote.py  store.py  validate.py
persona_pipeline/cli/: __main__.py  _paths.py  app.py  archetype.py  build.py  classify_occupation.py  download.py  match.py  serve.py  serve_http.py  simulate.py  stages.py
persona_pipeline/mappings/: __init__.py  _base.py  brazil.py  france.py  india.py  japan.py  korea.py  singapore.py  usa.py
persona_pipeline/stages/: archetype.py  classify_occupation.py  enrich.py  match.py  partition.py  simulate.py
scripts/: analyze_all_countries.py  diagnose_occupation.py  download_country.py  simulate_poc.py
tests/unit/: test_enrich.py  test_mappings.py  test_match.py  test_mcp_server.py  test_partition.py  test_remote.py  test_simulate.py  test_store.py  test_validate.py  test_workflow.py
(+3 files in other folders)
