[project]
name = "persona-pipeline"
version = "0.1.0"
description = "Nemotron-Personas multi-country archetype pipeline (rule-based, no LLM/embedding)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "datasets>=2.20",
    "pyarrow>=15",
    "typer>=0.12",
    "numpy<2.0",  # PyArrow/Polars compatibility
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
sim = ["anthropic>=0.40"]

[project.scripts]
persona-pipeline = "persona_pipeline.cli.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["persona_pipeline*"]

[tool.uv]
package = true
