[project]
name = "persona-mcp-store"
version = "0.1.0"
description = "Multi-country MCP server exposing raw Nemotron-Personas to LLM clients (sample / search / distribution / get)."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "datasets>=2.20",
    "pyarrow>=15",
    "typer>=0.12",
    "numpy<2.0",  # PyArrow/Polars compatibility
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
mcp = ["mcp>=1.2", "starlette>=0.40", "uvicorn>=0.30"]

[project.scripts]
persona-mcp-store = "persona_mcp_store.cli.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["persona_mcp_store*"]

[tool.uv]
package = true
